# photos

./: .gitignore  .pnp.cjs  README.md  package.json  pyproject.toml
src/frontend/: index.html
src/frontend/src/: main.tsx  router.tsx
src/frontend/src/routes/: album.tsx  root.tsx
src/photos/: main.py  web.py
