[tool.poetry]
name = "photos"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]
readme = "README.md"
packages = [{include = "photos", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
structlog = "^24.4.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
thumbnail = "^1.5"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
pillow-heif = "^0.18.0"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
